Fix Chrome z-index issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 .dnd-list__draggable {
+  position: relative;
   z-index: 1973;
   touch-action: none;
 }
